Link in CoreFoundation to physfs-static on MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,6 +271,13 @@ if(PHYSFS_BUILD_STATIC)
     set(PHYSFS_LIB_TARGET physfs-static)
     set(PHYSFS_INSTALL_TARGETS ${PHYSFS_INSTALL_TARGETS} ";physfs-static")
     set_property(TARGET physfs-static PROPERTY C_STANDARD 99)
+	if (APPLE)
+			find_library(CORE_FOUNDATION CoreFoundation)
+			if (NOT CORE_FOUNDATION)
+					message(FATAL_ERROR "CoreFoundation not found")
+			endif()
+			target_link_libraries(physfs-static ${CORE_FOUNDATION})
+	endif()
 endif()
 
 option(PHYSFS_BUILD_SHARED "Build shared library" TRUE)
