--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,7 +276,11 @@ if(PHYSFS_BUILD_STATIC)
 			if (NOT CORE_FOUNDATION)
 					message(FATAL_ERROR "CoreFoundation not found")
 			endif()
-			target_link_libraries(physfs-static ${CORE_FOUNDATION})
+			find_library(IOKIT IOKit)
+			if (NOT IOKIT)
+					message(FATAL_ERROR "IOKit not found")
+			endif()
+			target_link_libraries(physfs-static ${CORE_FOUNDATION} ${IOKIT})
 	endif()
 endif()
 
