Add option to force iso9660 filenames to lowercase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,11 @@ if(NOT PHYSFS_ARCHIVE_ISO9660)
     add_definitions(-DPHYSFS_SUPPORTS_ISO9660=0)
 endif()
 
+option(PHYSFS_ARCHIVE_ISO9660_LOWERCASE "Set ISO9660 files to lowercase" FALSE)
+if(PHYSFS_ARCHIVE_ISO9660_LOWERCASE)
+    add_definitions(-DPHYSFS_ISO9660_LOWERCASE=1)
+endif()
+
 option(PHYSFS_ARCHIVE_VDF "Enable Gothic I/II VDF archive support" TRUE)
 if(NOT PHYSFS_ARCHIVE_VDF)
     add_definitions(-DPHYSFS_SUPPORTS_VDF=0)
@@ -289,6 +294,8 @@ message_bool_option("QPAK support" PHYSFS_ARCHIVE_QPAK)
 message_bool_option("SLB support" PHYSFS_ARCHIVE_SLB)
 message_bool_option("VDF support" PHYSFS_ARCHIVE_VDF)
 message_bool_option("ISO9660 support" PHYSFS_ARCHIVE_ISO9660)
+message_bool_option("ISO9660 lowercase filenames"
+        PHYSFS_ARCHIVE_ISO9660_LOWERCASE)
 message_bool_option("Build static library" PHYSFS_BUILD_STATIC)
 message_bool_option("Build shared library" PHYSFS_BUILD_SHARED)
 message_bool_option("Build stdio test program" PHYSFS_BUILD_TEST)
