Add libs to physfs-static target
When using physfs as a subdirectory in another project, this allows the
dependency libraries to be added to the final link.

Fixes builds on macos (which require some extra objc libraries)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,6 +180,7 @@ if(PHYSFS_BUILD_STATIC)
     endif()
 
     set(PHYSFS_LIB_TARGET physfs-static)
+	target_link_libraries(physfs-static ${OPTIONAL_LIBRARY_LIBS} ${OTHER_LDFLAGS})
     set(PHYSFS_INSTALL_TARGETS ${PHYSFS_INSTALL_TARGETS} ";physfs-static")
 endif()
 
